change show dates

--- a/views/home.jade
+++ b/views/home.jade
@@ -61,17 +61,20 @@
             h3 Upcoming Shows
             //- h3 Current Events
             .row
-              .col-sm-4
-                p.
-                  <a href="http://www.coffeefest.com">Coffee Fest NY</a><br>
-                  March 7-9, 2014<br>
-                  Jacob Javits Center<br>
-              .col-sm-4
+              .col-sm-6
                 p.
                   <a href="http://www.pizzaexpo.com">International Pizza Expo</a><br>
-                  March 24-27, 2014<br>
+                  March 23-26, 2015<br>
                   Las Vegas Convention Center<br>
-              .col-sm-4
+                  Booth# 526
+              .col-sm-6
+                p.
+                  <a href="http://show.restaurant.org/Home">National Restaurant Show</a><br>
+                  May 16-19, 2015<br>
+                  McCormick Place<br>
+                  Chicago, IL<br>
+                  Booth# 351
+              //.col-sm-4
                 p.
                   <a href="http://show.restaurant.org/Home">National Restaurant Show</a><br>
                   May 17-20, 2014<br>
