--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1,4 +1,4 @@
-/* Variables 
+/* Variables
 -------------------------------------------------- */
 
 @grid-float-breakpoint: @screen-md;
@@ -6,7 +6,7 @@
 
 
 
-/* PIE 
+/* PIE
 -------------------------------------------------- */
 
 .border-radius-pie(@radius: 3px) {
@@ -26,6 +26,9 @@
 .pie-box-shadow(@shadow) {
   .box-shadow(@shadow);
   //behavior: url(/js/libs/PIE.htc);
+}
+#spinner-stop {
+  display: none;
 }
 #spinner-region {
   display: none;
@@ -152,7 +155,7 @@
 }
 
 /* ==========================================================================
-   Base tags 
+   Base tags
    ========================================================================== */
 
 h1, h2, h3, h4, h5, h6  {
@@ -193,7 +196,7 @@ body {
     padding: 10px;
     text-align: center;
     .close {
-      color: #fff; 
+      color: #fff;
       text-decoration: none;
       margin-top: -9px;
       margin-right: -6px;
@@ -237,21 +240,21 @@ form.form-inline {
    span.error {
     margin-top: 0px;
   }
- 
+
 }
 
 
 #myModal {
   #alert;
   .content {
-    width: 600px; 
+    width: 600px;
     background: #333;
     border: 1px solid #000;
     color: #fff;
     font-size: 18px;
     .inner {
       padding: 40px;
-      .clearfix(); 
+      .clearfix();
     }
     p {
       font-size: 40px;
@@ -278,8 +281,8 @@ form.form-inline {
   //margin-top: -18px;
   h3 {
     font-weight: normal;
-    margin-top: 0; 
-    margin-bottom: 0; 
+    margin-top: 0;
+    margin-bottom: 0;
     text-shadow: 1px 1px #fff;
   }
 }
@@ -290,7 +293,7 @@ form.form-inline {
 }
 
 /* ==========================================================================
-   breadcrumbs 
+   breadcrumbs
    ========================================================================== */
 .breadcrumbs {
   position: relative;
@@ -305,15 +308,15 @@ form.form-inline {
   h3 {
     font-weight: normal;
     font-size: 16px;
-    margin-top: 0; 
-    margin-bottom: 0; 
+    margin-top: 0;
+    margin-bottom: 0;
     ///text-shadow: 1px 1px #fff;
   }
 }
 
 
 /* ==========================================================================
-   Navbar 
+   Navbar
    ========================================================================== */
 
 
@@ -323,7 +326,7 @@ form.form-inline {
   margin: 0;
   background: #fff;
   .box-shadow(1px 1px 1px rgba(0,0,0,.2));
-  .container > .navbar-header, 
+  .container > .navbar-header,
   .container > .navbar-collapse {
     margin-right: 0px;
     margin-left: 0px;
@@ -414,7 +417,7 @@ form.form-inline {
           font-size: 12px;
         }
         li {
-          float: left; 
+          float: left;
           text-align: center;
         }
       }
@@ -439,20 +442,20 @@ form.form-inline {
 }
 
 .navbar .btn-navbar {
-  padding: 14px 15px; 
+  padding: 14px 15px;
 }
 
 /* ==========================================================================
-   Carousel 
+   Carousel
    ========================================================================== */
 .carousel {
 }
 /* ==========================================================================
-   Footer 
+   Footer
    ========================================================================== */
 footer {
   background-color: #333;
-  padding: 30px 0; 
+  padding: 30px 0;
   li a {
     color: #e2e3e4;
     font-size: 13px;
@@ -526,7 +529,7 @@ footer {
 
 
 /* ==========================================================================
-   Home 
+   Home
    ========================================================================== */
 #home .icons {
   padding: 0px 0;
@@ -621,7 +624,7 @@ footer {
       margin-bottom: 80px;
       .quotes {
         font-family: georgia, serif;
-        line-height: 0; 
+        line-height: 0;
         position: relative;
         top: -.2em;
       }
@@ -653,14 +656,14 @@ footer {
       }
     }
     h1 {
-     text-align: center; 
+     text-align: center;
      font-family: caslon, serif;
     }
   }
 }
 
 /* ==========================================================================
-   form-signin 
+   form-signin
    ========================================================================== */
 
 body.login, body.signup {
@@ -694,7 +697,7 @@ body.login, body.signup {
 }
 
 /* ==========================================================================
-   Narrow Page 
+   Narrow Page
    ========================================================================== */
 .narrowPage {
   background: #f5f5f5;
@@ -715,7 +718,7 @@ body.login, body.signup {
 }
 
 /* ==========================================================================
-   Misc 
+   Misc
    ========================================================================== */
 
 .product {
@@ -729,14 +732,14 @@ body.login, body.signup {
   .img-wrapper {
     text-align: center;
     img {
-      max-width: 100%; 
+      max-width: 100%;
     }
   }
   .description {
-    margin-bottom: 25px; 
+    margin-bottom: 25px;
   }
   .pdf {
-    border: 1px solid #f7f7f7; 
+    border: 1px solid #f7f7f7;
   }
   .pdfs a {
     display: block;
@@ -749,8 +752,8 @@ body.login, body.signup {
   }
   @media (min-width: @screen-md) {
     h2, h3 {
-      text-align: left; 
-    } 
+      text-align: left;
+    }
   }
   .breadcrumbs {
     padding: 7px 14px;
@@ -788,7 +791,7 @@ body.login, body.signup {
     margin-top: 15px;
     padding-bottom: .5em;
   }
-  .item-rows {  
+  .item-rows {
     margin-top: 10px;
     overflow: auto;
     list-style: none;
@@ -896,7 +899,7 @@ body.login, body.signup {
         border:2px solid #5FBDFF !important;
       }
       .hover-options {
-        position: absolute; 
+        position: absolute;
         top: 0;
         right: 0;
         background: white;
@@ -905,7 +908,7 @@ body.login, body.signup {
       }
       .thumbnail-wrapper {
         width: 100%;
-        height: 155px; 
+        height: 155px;
         text-align: center;
         display: table-cell;
         vertical-align: middle;
@@ -919,15 +922,15 @@ body.login, body.signup {
 
 
 .thumbs {
-  list-style: none;    
+  list-style: none;
   &>li {
-    float: left; 
+    float: left;
     margin-right: 10px;
     margin-bottom: 15px;
     border: 1px solid #eaeaea;
     text-align: center;
     .pdf {
-      border: 1px solid #f7f7f7; 
+      border: 1px solid #f7f7f7;
     }
     .actions {
       text-align: center;
@@ -956,22 +959,22 @@ body.login, body.signup {
   margin-top: 15px;
   list-style: none;
   li {
-    float: left; 
+    float: left;
     margin-left: 10px;
-  }  
+  }
 }
 
 .pdfCaption {
   .edit {
     display: none;
-  } 
+  }
   .edit .display {
-    display: none; 
-  } 
+    display: none;
+  }
 }
 
 .editing .caption-input {
-  //position: absolute;  
+  //position: absolute;
 }
 
 .editing .pdfCaption .display,
@@ -1074,7 +1077,7 @@ body.login, body.signup {
 
 
 /* ==========================================================================
-   Contact Page 
+   Contact Page
    ========================================================================== */
 #contact {
   .hd {
@@ -1084,7 +1087,7 @@ body.login, body.signup {
       padding: 0;
     }
     .row {
-      margin: 0; 
+      margin: 0;
     }
     .caption {
       @media (min-width: @screen-sm) {
@@ -1107,7 +1110,7 @@ body.login, body.signup {
     width: 100%;
   }
   h1 {
-    text-align: center; 
+    text-align: center;
   }
   .container {
     padding: 30px 30px 80px;
@@ -1166,7 +1169,7 @@ body.login, body.signup {
     font-size: 16px;
   }
   img {
-    width: 100%; 
+    width: 100%;
     //.-webkit-filter: blur(.3px) ~"saturate(150%)";
     //-webkit-filter: blur(1px) brightness(0.6) grayscale(1);
   }
