--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,4 +1,4 @@
-doctype 5
+doctype html
 html(lang="en")
   head
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
@@ -6,9 +6,9 @@ html(lang="en")
       var user = !{user}
     meta(charset='utf-8')
     if locals.title
-      title #{title} - Rosito Bisani 
+      title #{title} - Rosito Bisani
     else
-      title Rosito Bisani 
+      title Rosito Bisani
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='description', content='Serving the needs of the foodservice industry')
     link(rel='shortcut icon', href='/img/favicon.png')
@@ -33,9 +33,10 @@ html(lang="en")
       script(data-main='/js/main', src='/js/libs/require.js')
   body(id=locals.id?locals.id:'normal')
     #wrap
-      #spinner-region
-        .spinner
-          span LOADING
+      #spinner-stop
+        #spinner-region
+          .spinner
+            span LOADING
       #nav-region
         include nav
       #alert-region
