working on synesso files

--- a/views/home.jade
+++ b/views/home.jade
@@ -61,26 +61,25 @@
             h3 Upcoming Shows
             //- h3 Current Events
             .row
-              .col-sm-6
+              .col-sm-4
                 p.
                   <a href="http://www.pizzaexpo.com">International Pizza Expo</a><br>
                   March 8-10, 2016<br>
                   Las Vegas Convention Center<br>
                   Booth# 2237
-              .col-sm-6
+              .col-sm-4
+                p.
+                  <a href="http://www.coffeefest.com">Coffee Fest New York</a><br>
+                  March 11-13, 2016<br>
+                  Javits Center<br>
+                  Booth #s: 317, 416
+              .col-sm-4
                 p.
                   <a href="http://show.restaurant.org/Home">National Restaurant Show</a><br>
                   May 21-24, 2016<br>
                   McCormick Place<br>
                   Chicago, IL<br>
                   Booth# 4763
-              //.col-sm-4
-                p.
-                  <a href="http://show.restaurant.org/Home">National Restaurant Show</a><br>
-                  May 17-20, 2014<br>
-                  McCormick Place <br>
-                  Chicago, IL
-
               //- .col-sm-6.social-media
                 //- h5 Social Media
                 //- p.
