adding all new manuals

--- a/views/nav.jade
+++ b/views/nav.jade
@@ -12,7 +12,7 @@
         li: a(href="/") Home 
         li: a(href="/products") Products 
         li: a(href="/about") About 
-        li: a(href="/manuals") Manuals 
+        li: a(href="/manuals") Manuals / Parts 
         li: a(href="/contact") Contact 
         li.contact-numbers
           ul.list-unstyled
@@ -23,5 +23,3 @@
               a(href="tel:1-800-215-8563", data-bypass="true") East Coast Support 
                 span.phone-number 1-800-215-8563
       .user-menu.pull-right
-
-
