--- a/public/css/main.less
+++ b/public/css/main.less
@@ -785,11 +785,16 @@ body.login, body.signup {
    ========================================================================== */
 #manuals {
   h2 {
-    color:#666;
+    //color:#666;
     border-bottom: 1px solid #ccc;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    padding-bottom: .5em;
+    //margin-bottom: 15px;
+    //margin-top: 15px;
+    //padding-bottom: .5em;
+    //font-size: 30px;
+  }
+  h4 {
+    text-align: center;
+    font-size: 24px;
   }
   .item-rows {
     margin-top: 10px;
@@ -801,7 +806,7 @@ body.login, body.signup {
     li {
       float: left;
       width: 175px;
-      margin: 0 20px;
+      margin: 0 13px;
       margin-bottom: 15px;
       display: inline;
       text-align: center;
