gregs new updates

--- a/public/js/apps/products/templates/list_layout.hbs
+++ b/public/js/apps/products/templates/list_layout.hbs
@@ -6,6 +6,27 @@
     </div>
     <div class="col-md-9">
       <div id="products-region"></div>
+      <section id="display-cases">
+        <h2>Display Cases</h2>
+        <ul class="item-rows row">
+          <li class="col-md-4 col-sm-4">
+            <a href="http://www.ifi.it/en">
+              <div class="thumbnail-wrapper">
+                <img alt="" src="/img/ifi-logo.svg">
+              </div>
+              <div class="name"><span>Ifi</span></div>
+            </a>
+          </li>
+          <li class="col-md-4 col-sm-4">
+            <a href="http://oscartek.com/">
+              <div class="thumbnail-wrapper">
+                <img alt="" width="230" src="/img/otk-logo.png">
+              </div>
+              <div class="name"><span>Oscartek</span></div>
+            </a>
+          </li>
+        </ul>
+      </section>
     </div>
   </div>
 </div>
