listino updates before nra

--- a/views/home.jade
+++ b/views/home.jade
@@ -48,7 +48,7 @@
           span.title Citrus
             span.line-break Juicers
       .col-sm-2.col-xs-2
-        a(href="#")
+        a(href="/manuals")
           span.fonticon-tools.icon
           span.title Service &amp;
             span.line-break Support
