--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9758,6 +9758,9 @@ body.signup {
 #about img {
   width: 100%;
 }
+#about .hd {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ec1c2d+0,d3191c+99 */
+}
 /* ==========================================================================
    Reviews Page
    ========================================================================== */
