--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1175,8 +1175,16 @@ body.login, body.signup {
   }
   img {
     width: 100%;
-    //.-webkit-filter: blur(.3px) ~"saturate(150%)";
-    //-webkit-filter: blur(1px) brightness(0.6) grayscale(1);
+  }
+  .hd {
+    //height: 350px;
+    //width: 100%;
+     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ec1c2d+0,d3191c+99 */
+    //background: #ec1c2d; /* Old browsers */
+    //background: -moz-linear-gradient(top,  #ec1c2d 0%, #d3191c 99%); /* FF3.6-15 */
+    //background: -webkit-linear-gradient(top,  #ec1c2d 0%,#d3191c 99%); /* Chrome10-25,Safari5.1-6 */
+    //background: linear-gradient(to bottom,  #ec1c2d 0%,#d3191c 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ec1c2d', endColorstr='#d3191c',GradientType=0 ); /* IE6-9 */
   }
 }
 /* ==========================================================================
