views/home.jade

--- a/views/home.jade
+++ b/views/home.jade
@@ -63,11 +63,11 @@
             .row
               .col-sm-4
                 p.
-                  <a href="http://show.restaurant.org/Home">National Restaurant Show</a><br>
-                  May 21-24, 2016<br>
-                  McCormick Place<br>
-                  Chicago, IL<br>
-                  Booth# 4763
+                  <a href="http://www.westernfoodexpo.com">Western Foodservice Expo</a><br>
+                  Aug 28 - 30, 2016<br>
+                  Los Angeles Convention Center<br>
+                  Los Angeles, CA<br>
+                  Booth 1427 
               .col-sm-4
                 p.
               .col-sm-4
