--- a/views/home.jade
+++ b/views/home.jade
@@ -63,15 +63,22 @@
             .row
               .col-sm-4
                 p.
-                  <a href="http://www.westernfoodexpo.com">Western Foodservice Expo</a><br>
-                  Aug 28 - 30, 2016<br>
-                  Los Angeles Convention Center<br>
-                  Los Angeles, CA<br>
-                  Booth 1427 
+                  <a href="https://www.thenafemshow.org">NAFEM</a><br>
+                  February 9 - 11, 2017<br>
+                  Orlando, FL<br>
+                  Booth# 650
               .col-sm-4
                 p.
+                  <a href="http://www.pizzaexpo.com">International Pizza Expo</a><br>
+                  March 28 - 30, 2017<br>
+                  Las Vegas, NV<br>
+                  Booth# N1942
               .col-sm-4
                 p.
+                  <a href="https://show.restaurant.org/Home">National Restaurant Association</a><br>
+                  May 20 - 23, 2017<br>
+                  Chicago, IL<br>
+                  Booth# 1284
               //- .col-sm-6.social-media
                 //- h5 Social Media
                 //- p.
