--- a/views/home.jade
+++ b/views/home.jade
@@ -61,19 +61,19 @@
             h3 Upcoming Shows
             //- h3 Current Events
             .row
-              .col-sm-4
-                p.
-                  <a href="https://www.thenafemshow.org">NAFEM</a><br>
-                  February 9 - 11, 2017<br>
-                  Orlando, FL<br>
-                  Booth# 650
-              .col-sm-4
+              //.col-sm-4
+                //p.
+                  //<a href="https://www.thenafemshow.org">NAFEM</a><br>
+                  //February 9 - 11, 2017<br>
+                  //Orlando, FL<br>
+                  //Booth# 650
+              .col-sm-6
                 p.
                   <a href="http://www.pizzaexpo.com">International Pizza Expo</a><br>
                   March 28 - 30, 2017<br>
                   Las Vegas, NV<br>
                   Booth# N1942
-              .col-sm-4
+              .col-sm-6
                 p.
                   <a href="https://show.restaurant.org/Home">National Restaurant Association</a><br>
                   May 20 - 23, 2017<br>
