gregs corrections in red in email after my notes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9337,6 +9337,9 @@ body.signup {
   .product h3 {
     text-align: left;
   }
+  .product #pizza-ovens h3 {
+    text-align: center;
+  }
 }
 .product .breadcrumbs {
   padding: 7px 14px;
