--- a/public/css/main.less
+++ b/public/css/main.less
@@ -754,6 +754,9 @@ body.login, body.signup {
     h2, h3 {
       text-align: left;
     }
+    #pizza-ovens h3{
+      text-align: center;
+    }
   }
   .breadcrumbs {
     padding: 7px 14px;
