--- a/public/js/apps/products/templates/show.hbs
+++ b/public/js/apps/products/templates/show.hbs
@@ -3,85 +3,101 @@
     <div class"title">{{header}}</div>
   </div>
 </div>
+
 <div class="container">
   <h1>{{name}}</h1>
   <div class="row">
+    {{!-- left Half which is 6 width and pushed right --}}
     <div class="col-md-6 col-md-push-6 img-wrapper">
       {{#mainImage}}
         <img alt="{{name}}" src="/product-images/{{medium}}"/>
       {{/mainImage}}
     </div>
+    {{!-- right half which is pushed left --}}
     <div class="col-md-6 col-md-pull-6">
       <h2>Description</h2>
       <div class="description">{{{description}}}</div>
-      {{#if pdfs}}
-      <hr />
-      <h3>Spec Sheets</h3>
-      <div class="row pdfs">
-        {{#pdfs}}
-        <div class="col-sm-4">
-          <a href="/product-pdfs/{{name}}" target='_blank'>
-            <span class="thumbnail">
-              <img src="/product-pdfs/{{thumb}}" class="pdf"/>
-            </span>
-            <p class="title">{{caption}}</p>
-          </a>
-        </div>
-        {{/pdfs}}
-      </div>
-      {{/if}}
-
-      {{#if hasCols}}
-      <hr />
-        <h2>Spec Sheets</h2>
+      {{#if noCols}}
+        {{!-- specHeader --}}
+        <hr /><h3>Spec Sheets</h3>
+        {{!-- /specHeader --}}
         <div class="row pdfs">
-          <div class="col-sm-4 FIRST-COL">
-            <h3>Standard</h3>
-            {{#column1}}
-              <div class="row" style="margin-bottom: 15px">
-                <div class="col-xs-12">
-                  <a href="/product-pdfs/{{name}}" target='_blank'>
-                    <span class="thumbnail">
-                      <img src="/product-pdfs/{{thumb}}" class="pdf"/>
-                    </span>
-                    <p class="title">{{title}}</p>
-                  </a>
-                </div>
-              </div>
-            {{/column1}}
-          </div>
-          <div class="col-sm-4 SECOND-COLUMN">
-            <h3>CB</h3>
-            {{#column2}}
-              <div class="row" style="margin-bottom: 15px">
-                <div class="col-xs-12">
-                  <a href="/product-pdfs/{{name}}" target='_blank'>
-                    <span class="thumbnail">
-                      <img src="/product-pdfs/{{thumb}}" class="pdf"/>
-                    </span>
-                    <p class="title">{{title}}</p>
-                  </a>
-                </div>
-              </div>
-            {{/column2}}
-          </div>
-          <div class="col-sm-4 THIRD-COLUMN">
-            <h3>CM</h3>
-            {{#column3}}
-              <div class="row" style="margin-bottom: 15px">
-                <div class="col-xs-12">
-                  <a href="/product-pdfs/{{name}}" target='_blank'>
-                    <span class="thumbnail">
-                      <img src="/product-pdfs/{{thumb}}" class="pdf"/>
-                    </span>
-                    <p class="title">{{title}}</p>
-                  </a>
-                </div>
-              </div>
-            {{/column3}}
-          </div>
+          {{#each files}}
+            <div class="col-sm-4">
+              {{!-- specPartial --}}
+              <a href="/product-pdfs/{{name}}" target="_blank">
+                <span class="thumbnail">
+                  <img src="/product-pdfs/{{thumb}}" class="pdf"/>
+                </span>
+                <p class="title">{{caption}}</p>
+              </a>
+              {{!-- /specPartial --}}
+            </div>
+          {{/each}}
         </div>
       {{/if}}
     </div>
   </div>
+  {{#if has4Cols}}
+    {{!-- start a new row --}}
+    <div class="row" id="pizza-ovens">
+      <div class="col-md-12">
+        {{!-- specHeader --}}
+        <hr /><h3>Spec Sheets</h3>
+        {{!-- /specHeader --}}
+        <div class="row pdfs">
+          {{#each orignalFiles}}
+            <div class="col-sm-3">
+              <h3>{{columnHeader}}</h3>
+              {{#each specs}}
+                <div class="row" style="margin-bottom: 15px">
+                  <div class="col-xs-12">
+                    {{!-- specPartial --}}
+                    <a href="/product-pdfs/{{name}}" target="_blank">
+                      <span class="thumbnail">
+                        <img src="/product-pdfs/{{thumb}}" class="pdf"/>
+                      </span>
+                      <p class="title">{{caption}}</p>
+                    </a>
+                    {{!-- /specPartial --}}
+                  </div>
+                </div>
+              {{/each}}
+            </div>
+          {{/each}}
+        </div>
+      </div>
+    </div>
+  {{/if}}
+  {{#if has3Cols}}
+    {{!-- start a new row --}}
+    <div class="row" id="pizza-ovens">
+      <div class="col-md-12">
+        {{!-- specHeader --}}
+        <hr /><h3>Spec Sheets</h3>
+        {{!-- /specHeader --}}
+        <div class="row pdfs">
+          {{#each orignalFiles}}
+            <div class="col-sm-4">
+              <h3>{{columnHeader}}</h3>
+              {{#each specs}}
+                <div class="row" style="margin-bottom: 15px">
+                  <div class="col-xs-12">
+                    {{!-- specPartial --}}
+                    <a href="/product-pdfs/{{name}}" target="_blank">
+                      <span class="thumbnail">
+                        <img src="/product-pdfs/{{thumb}}" class="pdf"/>
+                      </span>
+                      <p class="title">{{caption}}</p>
+                    </a>
+                    {{!-- /specPartial --}}
+                  </div>
+                </div>
+              {{/each}}
+            </div>
+          {{/each}}
+        </div>
+      </div>
+    </div>
+  {{/if}}
 </div>
