--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,5 +1,13 @@
 footer 
   .container
+    div#social-media-icons
+      p Check us out on social media
+      a(href="https://www.facebook.com/RositoBisani")
+        span
+          object#facebook-icon(type="image/svg+xml", data="/img/facebook-35.svg") Your browser does not support SVGs
+      a(href="https://www.instagram.com/rositobisani")
+        span
+          object#instagram-icon(type="image/svg+xml", data="/img/instagram-35.svg") Your browser does not support SVGs
     a.footer-logo(href="/")
       span.fonticon-rosito-bisani
     ul.list-unstyled
@@ -19,4 +27,3 @@ footer
       | All rights reserved. 
       - var year = new Date().getFullYear()
       | Copyright &copy; #{year} Rosito Bisani Imports, Inc. 
-
