--- a/public/css/main.less
+++ b/public/css/main.less
@@ -473,6 +473,31 @@ footer {
     font-size: 28px;
     color: #fff;
   }
+  #social-media-icons {
+    padding-bottom: 15px;
+    text-align: center;
+    p {
+      color: #fff;
+    }
+    a {
+      display: inline-block;
+      position: relative;
+      z-index: 1;
+    }
+    span {
+      display: inline-block;
+    }
+    object {
+      position: relative;
+      z-index: -1
+    }
+    #facebook-icon {
+      padding: 0 10px;
+      }
+    #instagram-icon {
+      padding: 0 10px;
+    }
+  }
   @media (min-width: @screen-sm) {
     .footer-logo {
       float: left;
@@ -518,12 +543,13 @@ footer {
     height: auto !important;
     height: 100%;
     /* Negative indent footer by it's height */
-    margin: 0 auto -134px;
+    /* was 134px now adding height of added social media icons */
+    margin: 0 auto -220px;
   }
   /* Set the fixed height of the footer here */
   #push,
   footer {
-    height: 134px;
+    height: 220px;
   }
 }
 
