--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9103,11 +9103,12 @@ body {
   height: auto !important;
   height: 100%;
   /* Negative indent footer by it's height */
-  margin: 0 auto -379px;
+  /* was 379px adding 86px */
+  margin: 0 auto -465px;
 }
 #push,
 footer {
-  height: 379px;
+  height: 465px;
 }
 @media (min-width: 768px) {
   /* Wrapper for page content to push down footer */
@@ -9116,7 +9117,7 @@ footer {
     height: auto !important;
     height: 100%;
     /* Negative indent footer by it's height */
-    /* was 134px now adding height of added social media icons */
+    /* was 134px now adding height of added social media icons 86px */
     margin: 0 auto -220px;
   }
   /* Set the fixed height of the footer here */
