--- a/public/css/main.less
+++ b/public/css/main.less
@@ -529,11 +529,12 @@ body {
   height: auto !important;
   height: 100%;
   /* Negative indent footer by it's height */
-  margin: 0 auto -379px;
+  /* was 379px adding 86px */
+  margin: 0 auto -465px;
 }
 #push,
 footer {
-  height: 379px;
+  height: 465px;
 }
 
 @media (min-width: @screen-sm) { //768
@@ -543,7 +544,7 @@ footer {
     height: auto !important;
     height: 100%;
     /* Negative indent footer by it's height */
-    /* was 134px now adding height of added social media icons */
+    /* was 134px now adding height of added social media icons 86px */
     margin: 0 auto -220px;
   }
   /* Set the fixed height of the footer here */
