--- a/views/home.jade
+++ b/views/home.jade
@@ -67,18 +67,23 @@
                   //February 9 - 11, 2017<br>
                   //Orlando, FL<br>
                   //Booth# 650
-              .col-sm-6
+              .col-sm-4
                 p.
-                  <a href="http://www.pizzaexpo.com">International Pizza Expo</a><br>
-                  March 28 - 30, 2017<br>
-                  Las Vegas, NV<br>
-                  Booth# N1942
-              .col-sm-6
+                  <a href="http://gelatoworldtour.com/challenges/los-angeles-challenge/">Gelato World Tour - Los Angeles Challenge</a><br>
+                  May 2, 2017<br>
+                  Rosito Bisani HQ
+              .col-sm-4
                 p.
                   <a href="https://show.restaurant.org/Home">National Restaurant Association</a><br>
                   May 20 - 23, 2017<br>
                   Chicago, IL<br>
                   Booth# 1284
+              .col-sm-4
+                p.
+                  <a href="http://www.pizzaandpastaexpo.com/">Pizza & Pasta Northeast</a><br>
+                  October 17-18, 2017<br>
+                  Atlantic City, NJ<br>
+                  Booth# 527
               //- .col-sm-6.social-media
                 //- h5 Social Media
                 //- p.
