--- a/views/home.jade
+++ b/views/home.jade
@@ -61,29 +61,25 @@
             h3 Upcoming Shows
             //- h3 Current Events
             .row
-              //.col-sm-4
-                //p.
-                  //<a href="https://www.thenafemshow.org">NAFEM</a><br>
-                  //February 9 - 11, 2017<br>
-                  //Orlando, FL<br>
-                  //Booth# 650
-              .col-sm-4
-                p.
-                  <a href="http://gelatoworldtour.com/challenges/los-angeles-challenge/">Gelato World Tour - Los Angeles Challenge</a><br>
-                  May 2, 2017<br>
-                  Rosito Bisani HQ
-              .col-sm-4
-                p.
-                  <a href="https://show.restaurant.org/Home">National Restaurant Association</a><br>
-                  May 20 - 23, 2017<br>
-                  Chicago, IL<br>
-                  Booth# 1284
               .col-sm-4
                 p.
                   <a href="http://www.pizzaandpastaexpo.com/">Pizza & Pasta Northeast</a><br>
                   October 17-18, 2017<br>
                   Atlantic City, NJ<br>
-                  Booth# 527
+                  Booth# 129 <br>
+                  <a href="https://l.feathr.co/v0/pizza-pasta-expo-2017-rosito-bisani-imports-inc-r">Click here to Register for a Free Pass Courtesy of RB</a>
+              .col-sm-4
+                p.
+                  <a href="http://www.pizzaexpo.com">Pizza Expo</a><br>
+                  March 20-22, 2018<br>
+                  Las Vegas Convention Center<br>
+                  Booth Number 1226    
+              .col-sm-4
+                p.
+                  <a href="https://show.restaurant.org/Home">National Restaurant Association</a><br>
+                  May 19-22, 2018<br>
+                  Chicago, IL<br>
+                  Booth# 3291                
               //- .col-sm-6.social-media
                 //- h5 Social Media
                 //- p.
