--- a/views/home.jade
+++ b/views/home.jade
@@ -85,7 +85,8 @@
                   <a href="http://www.pizzaexpo.com">Pizza Expo</a><br>
                   March 20-22, 2018<br>
                   Las Vegas Convention Center<br>
-                  Booth Number 1226    
+                  Booth Number 1226<br>
+                  <a href="https://l.feathr.co/v1/pizza-expo-2018-rosito-bisani-imports-inc-b">Click here to register for a free badge</a>
               //.col-sm-4
               //  p.
               //    <a href="https://show.restaurant.org/Home">National Restaurant Association</a><br>
