--- a/views/home.jade
+++ b/views/home.jade
@@ -61,25 +61,6 @@
             h3 Upcoming Shows
             //- h3 Current Events
             .row
-              //.col-sm-4
-              //  p.
-              //    <a href="http://www.pizzaandpastaexpo.com/">Pizza & Pasta Northeast</a><br>
-              //    October 3-4, 2018<br>
-              //    Atlantic City, NJ<br>
-              //    Booth# 619 <br>
-              //    <a href="https://l.feathr.co/v0/pizza-pasta-expo-2017-rosito-bisani-imports-inc-r">Click here to Register for a Free Pass Courtesy of RB</a>
-              .col-sm-4
-                p.
-                  <a href="http://www.internationalrestaurantny.com">International Restaurant and Foodservice Show of NY</a><br>
-                  March 4-6, 2018<br>
-                  Jacob Javits Center<br>
-                  New York, NY<br>
-              .col-sm-4
-                p.
-                  <a href="http://drexel.edu/fhm/academics/Culinary-Arts-Food-Science/philly-chef-conference/2018%20Philly%20Chef%20Conference">2018 Philly Chef Conference</a><br>
-                  March 11-12, 2018<br>
-                  Drexel University<br>
-                  Philadelphia, PA<br>  
               .col-sm-4
                 p.
                   <a href="http://www.pizzaexpo.com">Pizza Expo</a><br>
@@ -87,12 +68,19 @@
                   Las Vegas Convention Center<br>
                   Booth Number 1655<br>
                   <a href="https://l.feathr.co/v1/pizza-expo-2018-rosito-bisani-imports-inc-b">Click here to register for a free badge</a>
-              //.col-sm-4
-              //  p.
-              //    <a href="https://show.restaurant.org/Home">National Restaurant Association</a><br>
-              //    May 19-22, 2018<br>
-              //    Chicago, IL<br>
-              //    Booth# 3291                
+              .col-sm-4
+                p.
+                  <a href="https://show.restaurant.org/Home">National Restaurant Association</a><br>
+                  May 19-22, 2018<br>
+                  Chicago, IL<br>
+                  Booth# 3291 
+              .col-sm-4
+                p.
+                  <a href="http://www.pizzaandpastaexpo.com/">Pizza & Pasta Northeast</a><br>
+                  October 3-4, 2018<br>
+                  Atlantic City, NJ<br>
+                  Booth# 619 <br>
+                  <a href="https://l.feathr.co/v0/pizza-pasta-expo-2017-rosito-bisani-imports-inc-r">Click here to Register for a Free Pass Courtesy of RB</a>             
               //- .col-sm-6.social-media
                 //- h5 Social Media
                 //- p.
