--- a/views/home.jade
+++ b/views/home.jade
@@ -61,26 +61,20 @@
             h3 Upcoming Shows
             //- h3 Current Events
             .row
-              .col-sm-4
+              .col-sm-6
                 p.
-                  <a href="http://www.pizzaexpo.com">Pizza Expo</a><br>
-                  March 20-22, 2018<br>
-                  Las Vegas Convention Center<br>
-                  Booth Number 1655<br>
-                  <a href="https://l.feathr.co/v1/pizza-expo-2018-rosito-bisani-imports-inc-b">Click here to register for a free badge</a>
-              .col-sm-4
-                p.
-                  <a href="https://show.restaurant.org/Home">National Restaurant Association</a><br>
-                  May 19-22, 2018<br>
-                  Chicago, IL<br>
-                  Booth# 3291 
-              .col-sm-4
+                  <a href="https://www.pizzadelphiafest.com/e/philadelphia-pizza-festival#top">Pizzadelphia Pizza Festival</a><br>
+                  July 14, 2018<br>
+                  12pm - 5:30pm<br>
+                  The Navy Yard, Philadelphia<br>
+              .col-sm-6
                 p.
                   <a href="http://www.pizzaandpastaexpo.com/">Pizza & Pasta Northeast</a><br>
                   October 3-4, 2018<br>
                   Atlantic City, NJ<br>
                   Booth# 619 <br>
                   <a href="https://l.feathr.co/v0/pizza-pasta-expo-2017-rosito-bisani-imports-inc-r">Click here to Register for a Free Pass Courtesy of RB</a>             
+              //.col-sm-4
               //- .col-sm-6.social-media
                 //- h5 Social Media
                 //- p.
