--- a/public/css/main.less
+++ b/public/css/main.less
@@ -623,14 +623,14 @@ footer {
   .philosophy {
     position: relative;
     p {
-      font-size: 13px;
+      font-size: 14px;
       .show-hide-content {
         display: none;
       }
     }
   }
   .current-events {
-    font-size: 11px;
+    font-size: 14px;
     @media (min-width: @screen-sm) {
       border-right: 1px solid #ececec;
     }
@@ -640,6 +640,12 @@ footer {
     .fonticon-facebook {
       font-size: 15px;
       vertical-align: bottom;
+    }
+    h1 {
+      margin-bottom: 25px;
+    }
+    .title {
+      font-size: 24px;
     }
 
   }
