--- a/views/home.jade
+++ b/views/home.jade
@@ -56,49 +56,37 @@
   .hd
     .container
       .row
-        .col-sm-6
-          .current-events
-            h3 Upcoming Shows
-            //- h3 Current Events
-            .row
-              .col-sm-6
-                p.
-                  <a href="https://www.pizzadelphiafest.com/e/philadelphia-pizza-festival#top">Pizzadelphia Pizza Festival</a><br>
-                  July 14, 2018<br>
-                  12pm - 5:30pm<br>
-                  The Navy Yard, Philadelphia<br>
-              .col-sm-6
-                p.
-                  <a href="http://www.pizzaandpastaexpo.com/">Pizza & Pasta Northeast</a><br>
-                  October 3-4, 2018<br>
-                  Atlantic City, NJ<br>
-                  Booth# 619 <br>
-                  <a href="https://l.feathr.co/v0/pizza-pasta-expo-2017-rosito-bisani-imports-inc-r">Click here to Register for a Free Pass Courtesy of RB</a>             
-              //.col-sm-4
-              //- .col-sm-6.social-media
-                //- h5 Social Media
-                //- p.
-                  <a href="https://www.facebook.com/RositoBisani"><span class="fonticon-facebook"></span> Visit our Facebook page</a>
-
-        .col-sm-6
-          .philosophy
-            .RB-icon
-            h3 Our Philosophy
+        .current-events
+          h1 Upcoming Shows
+          .col-sm-4
             p.
-              We believe that success is built upon a foundation of quality
-              products and strong relationships. Whether it’s equipment,
-              technical support, or customer service, we know that YOU, the
-              customer, depend on us to offer value in each and every solution
-              that we provide<span class="show-hide-link-container">...
-              <a class="show-hide-link">read</a></span>
-              <span class="show-hide-content">We feel that Knowledge, Passion, Trust,
-              Communication, and Positive Energy are some of the key elements
-              necessary to establish a prosperous working relationship. With a
-              focus on these core values, we know that we will deliver solutions
-              to your challenges and help your business grow. It is through this
-              consistent recipe that we will constantly strengthen our relationship
-              and be the obvious source for all of your specialty food service
-              equipment needs…today, tomorrow, and beyond.</span>
+              <a class="title" href="https://www.westernfoodexpo.com">Western Foodservice Expo<img src="/img/942.png"</a><br>
+          .col-sm-4
+            p.
+              <a class="title" href="http://www.pizzaandpastaexpo.com/">Pizza & Pasta Northeast</a><br>
+              October 3-4, 2018<br>
+              Atlantic City, NJ<br>
+              Booth# 619 <br>
+              <a href="https://l.feathr.co/v0/pizza-pasta-expo-2017-rosito-bisani-imports-inc-r">Click here to Register for a Free Pass Courtesy of RB</a>             
+          .col-sm-4
+            .philosophy
+              .RB-icon
+              div.title Our Philosophy
+              p.
+                We believe that success is built upon a foundation of quality
+                products and strong relationships. Whether it’s equipment,
+                technical support, or customer service, we know that YOU, the
+                customer, depend on us to offer value in each and every solution
+                that we provide<span class="show-hide-link-container">...
+                <a class="show-hide-link">read</a></span>
+                <span class="show-hide-content">We feel that Knowledge, Passion, Trust,
+                Communication, and Positive Energy are some of the key elements
+                necessary to establish a prosperous working relationship. With a
+                focus on these core values, we know that we will deliver solutions
+                to your challenges and help your business grow. It is through this
+                consistent recipe that we will constantly strengthen our relationship
+                and be the obvious source for all of your specialty food service
+                equipment needs…today, tomorrow, and beyond.</span>
 
   .testimonials
     .container
