--- a/views/home.jade
+++ b/views/home.jade
@@ -60,14 +60,10 @@
           h1 Upcoming Shows
           .col-sm-4
             p.
-              <a class="title" href="https://www.westernfoodexpo.com">Western Foodservice Expo<img src="/img/942.png"</a><br>
+              <a class="title" href="https://www.westernfoodexpo.com">Western Foodservice Expo<img src="/img/942.png"/></a><br>
           .col-sm-4
             p.
-              <a class="title" href="http://www.pizzaandpastaexpo.com/">Pizza & Pasta Northeast</a><br>
-              October 3-4, 2018<br>
-              Atlantic City, NJ<br>
-              Booth# 619 <br>
-              <a href="https://l.feathr.co/v0/pizza-pasta-expo-2017-rosito-bisani-imports-inc-r">Click here to Register for a Free Pass Courtesy of RB</a>             
+              <a class="title" href="https://l.feathr.co/v0/pizza-pasta-expo-2017-rosito-bisani-imports-inc-r">Pizza & Pasta Northeast<img src="/img/pizza-pasta-banner.png"/></a><br>
           .col-sm-4
             .philosophy
               .RB-icon
