--- a/views/home.jade
+++ b/views/home.jade
@@ -63,7 +63,7 @@
               <a class="title" href="https://www.westernfoodexpo.com">Western Foodservice Expo<img src="/img/942.png"/></a><br>
           .col-sm-4
             p.
-              <a class="title" href="https://l.feathr.co/v0/pizza-pasta-expo-2017-rosito-bisani-imports-inc-r">Pizza & Pasta Northeast<img src="/img/pizza-pasta-banner.png"/></a><br>
+              <a class="title" href="http://l.feathr.co/PPNE18_Rosito-Bisani-Imports-Inc-I">Pizza & Pasta Northeast<img src="/img/pizza-pasta-banner.png"/></a><br>
           .col-sm-4
             .philosophy
               .RB-icon
