--- a/views/home.jade
+++ b/views/home.jade
@@ -60,9 +60,10 @@
           h1 Upcoming Shows
           .col-sm-4
             p.
-              <a class="title" href="http://l.feathr.co/PPNE18_Rosito-Bisani-Imports-Inc-I">Pizza & Pasta Northeast<img src="/img/pizza-pasta-banner.png"/></a><br>
+              <a class="title" href="http://l.feathr.co/PPNE18_Rosito-Bisani-Imports-Inc-I"><img src="/img/pizza-pasta-banner.png"/></a><br>
           .col-sm-4
             p.
+              <a class="title" href="http://www.pafoodserviceexpo.com/registration"><img src="/img/pa-foodservice-expo.png"/></a><br>
           .col-sm-4
             .philosophy
               .RB-icon
