removed all shows

--- a/views/home.jade
+++ b/views/home.jade
@@ -57,11 +57,12 @@
     .container
       .row
         .current-events
-          h1 Upcoming Shows
-          .col-sm-6
-            p.
-              <a class="title" href="http://www.pafoodserviceexpo.com/registration"><img src="/img/pa-foodservice-expo.png"/></a><br>
-          .col-sm-6
+          //h1 Upcoming Shows
+          //.col-sm-6
+          //  p.
+          //    <a class="title" href="http://www.pafoodserviceexpo.com/registration"><img src="/img/pa-foodservice-expo.png"/></a><br>
+          //.col-sm-6
+          .col-sm-12
             .philosophy
               .RB-icon
               div.title Our Philosophy
