add new shows no banners

--- a/views/home.jade
+++ b/views/home.jade
@@ -57,12 +57,20 @@
     .container
       .row
         .current-events
-          //h1 Upcoming Shows
-          //.col-sm-6
-          //  p.
-          //    <a class="title" href="http://www.pafoodserviceexpo.com/registration"><img src="/img/pa-foodservice-expo.png"/></a><br>
-          //.col-sm-6
-          .col-sm-12
+          h1 Upcoming Shows
+          .col-sm-4
+            p.
+              <a class="title" href="https://www.thenafemshow.org">NAFEM</a><br>
+              February 7-9, 2019<br>
+              Orlando, FL<br>
+              Booth# 1285 (Morello Forni)<br>
+          .col-sm-4
+            p.
+              <a class="title" href="https://www.pizzaexpo.com">International Pizza Expo</a><br>
+              March 4-7, 2019<br>
+              Las Vegas, NV<br>
+              Booth# 845<br>
+          .col-sm-4
             .philosophy
               .RB-icon
               div.title Our Philosophy
