--- a/views/home.jade
+++ b/views/home.jade
@@ -60,16 +60,16 @@
           h1 Upcoming Shows
           .col-sm-4
             p.
-              <a class="title" href="https://www.thenafemshow.org">NAFEM</a><br>
-              February 7-9, 2019<br>
-              Orlando, FL<br>
-              Booth# 1285 (Morello Forni)<br>
+              <a class="title" href="https://www.nationalrestaurantshow.com">NRA</a><br>
+              May 18-21, 2019<br>
+              Chicago, IL<br>
+              Booth 3641  
           .col-sm-4
             p.
-              <a class="title" href="https://www.pizzaexpo.com">International Pizza Expo</a><br>
-              March 4-7, 2019<br>
-              Las Vegas, NV<br>
-              Booth# 845<br>
+              <a class="title" href="https://www.pizzaandpastaexpo.com">Pizza & Pasta Northeast</a><br>
+              September 25-26, 2019<br>
+              Atlantic City, NJ<br>
+              Booth 537  
           .col-sm-4
             .philosophy
               .RB-icon
