--- a/views/home.jade
+++ b/views/home.jade
@@ -60,16 +60,18 @@
           h1 Upcoming Shows
           .col-sm-4
             p.
-              <a class="title" href="https://www.nationalrestaurantshow.com">NRA</a><br>
-              May 18-21, 2019<br>
-              Chicago, IL<br>
-              Booth 3641  
-          .col-sm-4
-            p.
               <a class="title" href="https://www.pizzaandpastaexpo.com">Pizza & Pasta Northeast</a><br>
               September 25-26, 2019<br>
               Atlantic City, NJ<br>
-              Booth 537  
+              Booth 537<br>  
+              <a href="https://l.feathr.co/ppne19_landing--rosito-bisani-imports-inc">https://l.feathr.co/ppne19_landing--rosito-bisani-imports-inc</a>
+          .col-sm-4
+            //p.
+              //<a class="title" href="https://www.nationalrestaurantshow.com">NRA</a><br>
+              //May 18-21, 2019<br>
+              //Chicago, IL<br>
+              //Booth 3641
+              
           .col-sm-4
             .philosophy
               .RB-icon
