adding and deleting products

--- a/views/home.jade
+++ b/views/home.jade
@@ -64,7 +64,7 @@
               September 25-26, 2019<br>
               Atlantic City, NJ<br>
               Booth 537<br>  
-              <a href="https://l.feathr.co/ppne19_landing--rosito-bisani-imports-inc">https://l.feathr.co/ppne19_landing--rosito-bisani-imports-inc</a>
+              <a href="https://l.feathr.co/ppne19_landing--rosito-bisani-imports-inc">Register Now!</a>
           .col-sm-4
             //p.
               //<a class="title" href="https://www.nationalrestaurantshow.com">NRA</a><br>
