--- a/views/home.jade
+++ b/views/home.jade
@@ -60,11 +60,10 @@
           h1 Upcoming Shows
           .col-sm-4
             p.
-              <a class="title" href="https://www.pizzaandpastaexpo.com">Pizza & Pasta Northeast</a><br>
-              September 25-26, 2019<br>
-              Atlantic City, NJ<br>
-              Booth 537<br>  
-              <a href="https://l.feathr.co/ppne19_landing--rosito-bisani-imports-inc">Register Now!</a>
+              <a class="title" href="https://www.pizzaexpo.com/">Pizza Expo Las Vegas</a><br>
+              March 31st – April 2nd<br>
+              Booth 2123<br>
+              <a href="https://pizza.a2zinc.net/PizzaExpo2020/Public/eBooth.aspx?IndexInList=0&FromPage=Exhibitors.aspx&ParentBoothID=&ListByBooth=true&BoothID=953629">Register Now!</a><br>
           .col-sm-4
             //p.
               //<a class="title" href="https://www.nationalrestaurantshow.com">NRA</a><br>
